Horizontal scroll bar fixed

--- a/Waxom/less/waxom-main.less
+++ b/Waxom/less/waxom-main.less
@@ -7,8 +7,6 @@ body {
     font-family: 'Raleway', sans-serif;
     font-weight: 400;
     font-size: 1.5rem;
-
-    width: 100vw;
 }
 
 .row {
@@ -713,7 +711,7 @@ a {
 
 /*  ------------ Mobile ------------  */
 /*  --------------------------------  */
-@media screen and (max-width: 340px) {
+@media screen and (max-width: 576px) {
     html {
         font-size: 7px;
     }
